[package]
name = "pingpong"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
